# Kost-Management

./: Cargo.toml  README.md  readme.md
migrations/: 20260106094112_create_users_table.sql  20260119062934_seed_roles_and_permissions.sql  20260119073034_seed_assign_role_permissions.sql
src/: main.rs
src/config/: database.rs
src/handlers/: kost_handler.rs  login_handler.rs  mod.rs  register_user_handler.rs  room_handler.rs  user_handler.rs
src/middlewares/: auth_middleware.rs  mod.rs  permission_middleware.rs
src/models/: kost.rs  mod.rs  room.rs  user.rs
src/routes/: auth_routes.rs  kost_route.rs  mod.rs  room_route.rs  user_route.rs
src/schemas/: kost_schema.rs  login_schema.rs  mod.rs  register_schema.rs  room_schema.rs  user_schema.rs
src/utils/: jwt.rs  mod_auth.rs  mod_data.rs  mod_response.rs  mod_user.rs  response.rs  state.rs
