[package]
name = "kost_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = "1.0.228"
