[package]
name = "kost_management"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
